force-app/main/default/objects/User/fields/Active_Directory_ID__c.field-meta.xml
<CustomField>
    <fullName>Active_Directory_ID__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Agent&apos;s User ID in Active Directory</description>
    <label>Active Directory ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>