force-app/main/default/objects/User/fields/Area_Code__c.field-meta.xml
<CustomField>
    <fullName>Area_Code__c</fullName>
    <complianceGroup>Integrity_Trusted;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>This is the management district within the State group that the employee record is related to</description>
    <label>Area Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>