force-app/main/default/objects/User/fields/Business_Function__c.field-meta.xml
<CustomField>
    <fullName>Business_Function__c</fullName>
    <complianceGroup>Integrity - Accurate</complianceGroup>
    <description>Placeholder to store actual business function name of the user</description>
    <label>Business Function</label>
    <length>50</length>
    <type>Text</type>
</CustomField>