force-app/main/default/objects/User/fields/Business_Role__c.field-meta.xml
<CustomField>
    <fullName>Business_Role__c</fullName>
    <description>Placeholder to store actual business role name</description>
    <label>Business Role</label>
    <length>50</length>
    <type>Text</type>
</CustomField>