force-app/main/default/objects/User/fields/Commercial_Segment__c.field-meta.xml
<CustomField>
    <fullName>Commercial_Segment__c</fullName>
    <complianceGroup>Integrity_Trusted;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>This is the Commercial Segment that the employee record is related to</description>
    <label>Segment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AF</fullName>
                <label>Asset Finance</label>
            </value>
            <value>
                <fullName>CBO</fullName>
                <label>Commercial Broker</label>
            </value>
            <value>
                <fullName>SD</fullName>
                <label>Special Distribution</label>
            </value>
            <value>
                <fullName>TB</fullName>
                <label>Transactional Banking</label>
            </value>
            <value>
                <fullName>SME</fullName>
                <label>Small to Medium Enterprises</label>
            </value>
            <value>
                <fullName>SME NBC</fullName>
                <label>Small to Medium Enterprises - NBC</label>
            </value>
            <value>
                <fullName>DSI</fullName>
                <label>Diversified and Specialist Industries</label>
            </value>
            <value>
                <fullName>PB</fullName>
                <label>Private Bank</label>
            </value>
            <value>
                <fullName>Markets</fullName>
            </value>
            <value>
                <fullName>BB</fullName>
                <isActive>false</isActive>
                <label>Business Banking</label>
            </value>
            <value>
                <fullName>SBB</fullName>
                <isActive>false</isActive>
                <label>Small Business Banking</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>