force-app/main/default/objects/User/fields/Employee_Id__c.field-meta.xml
<CustomField>
    <fullName>Employee_Id__c</fullName>
    <complianceGroup>Integrity_Trusted;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Employee ID</description>
    <externalId>true</externalId>
    <label>Employee Id</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>