force-app/main/default/objects/User/fields/Industry_Code__c.field-meta.xml
<CustomField>
    <fullName>Industry_Code__c</fullName>
    <complianceGroup>Integrity_Trusted;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>This is the Industry Specialization associated with the employee record (what industries are the customers they usually work with in).

If no specific Industry, then this is usually &apos;Diversified&apos; or &apos;Unknown&apos;. Commonly, an employee&apos;s customers need to be over 50% of that industry to have an Industry Specialization.</description>
    <label>Industry Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>