force-app/main/default/objects/User/fields/Is_Manager__c.field-meta.xml
<CustomField>
    <fullName>Is_Manager__c</fullName>
    <complianceGroup>Source_Salesforce;Integrity_Accurate;Privacy_Personal_Information</complianceGroup>
    <description>Determines whether user is manager</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Is Manager</label>
    <length>10</length>
    <type>Text</type>
</CustomField>