force-app/main/default/objects/User/fields/Lan_Id__c.field-meta.xml
<CustomField>
    <fullName>Lan_Id__c</fullName>
    <complianceGroup>Privacy_Non_Personal_Information;Integrity_Trusted;Source_Salesforce</complianceGroup>
    <description>LAN ID of the user who captured the response or who the lead was routed to (if available).</description>
    <externalId>true</externalId>
    <label>Lan Id</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>