force-app/main/default/objects/User/fields/Leads_Count__c.field-meta.xml
<CustomField>
    <fullName>Leads_Count__c</fullName>
    <complianceGroup>Integrity_Trusted;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>This is the amount of iKnow Customer Conversations (leads via iKnow Campaigns) that can be assigned to that employee record for the week.	INT</description>
    <label>Leads Count</label>
    <length>50</length>
    <type>Text</type>
</CustomField>