force-app/main/default/objects/User/fields/Manager_Email__c.field-meta.xml
<CustomField>
    <fullName>Manager_Email__c</fullName>
    <complianceGroup>Integrity - Trusted;Privacy_Non-Sensitive_Personal_Information;Source - Salesforce</complianceGroup>
    <description>Email of Manager</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Manager Email</label>
    <type>Email</type>
</CustomField>