force-app/main/default/objects/User/fields/Manager_Lan_Id__c.field-meta.xml
<CustomField>
    <fullName>Manager_Lan_Id__c</fullName>
    <complianceGroup>Integrity - Trusted;Privacy_Non-Sensitive_Personal_Information;Source - Salesforce</complianceGroup>
    <description>Lan Id of the Manager</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Manager Lan-Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>