force-app/main/default/objects/User/fields/ML_Role__c.field-meta.xml
<CustomField>
    <fullName>ML_Role__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>ML Role list</description>
    <label>ML Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Franchise Owner</fullName>
            </value>
            <value>
                <fullName>Franchise Manager</fullName>
                <label>Business Manager</label>
            </value>
            <value>
                <fullName>Loan Writer</fullName>
            </value>
            <value>
                <fullName>Admin</fullName>
                <label>Franchise Admin</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>