force-app/main/default/objects/User/fields/ML_Territories_Virtual__c.field-meta.xml
<CustomField>
    <fullName>ML_Territories_Virtual__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Virtual list of territiories</description>
    <label>ML Territories Virtual</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ML_Territories</valueSetName>
    </valueSet>
</CustomField>