force-app/main/default/objects/User/fields/Refresh_Token__c.field-meta.xml
<CustomField>
    <fullName>Refresh_Token__c</fullName>
    <complianceGroup>Integrity - Trusted;Privacy - Non Personal Information;Source_Azure</complianceGroup>
    <description>User&apos;s Azure refresh token issued by Salesforce</description>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>Refresh Token</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>