force-app/main/default/objects/User/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Non Personal Information</complianceGroup>
    <description>The date at which the user joined ANZ</description>
    <label>Customer End Date</label>
    <type>Date</type>
</CustomField>