force-app/main/default/objects/User/fields/State_Code__c.field-meta.xml
<CustomField>
    <fullName>State_Code__c</fullName>
    <complianceGroup>Integrity_Trusted;Privacy_Non_Personal_Information;Source_Sailpoint</complianceGroup>
    <description>This is the management State group within the Segment that the employee record is related to

(Note: this is not always a geographical state)</description>
    <label>State Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>