force-app/main/default/objects/User/fields/Sub_Team_Code__c.field-meta.xml
<CustomField>
    <fullName>Sub_Team_Code__c</fullName>
    <complianceGroup>Integrity - Trusted;Privacy - Non Personal Information;Source_Sailpoint</complianceGroup>
    <description>This field will track the sub team code that the NBC Bankers belongs to</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Pod</label>
    <length>100</length>
    <type>Text</type>
</CustomField>