force-app/main/default/objects/User/fields/Team_Code__c.field-meta.xml
<CustomField>
    <fullName>Team_Code__c</fullName>
    <complianceGroup>Integrity_Trusted;Privacy_Non_Personal_Information;Source_Sailpoint</complianceGroup>
    <description>This is the Team that an employee record relates to if they&apos;re part of the Commercial Sales Centre / National Business Centre</description>
    <label>Team Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>