force-app/main/default/objects/User/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <description>This field is used to calculate the unique users from daily login history</description>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>User</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>