force-app/main/default/objects/User/listViews/Test_Users.listView-meta.xml
<ListView>
    <fullName>Test_Users</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>CORE.USERS.SAML_SUBJECT</columns>
    <columns>Business_Function__c</columns>
    <columns>Business_Role__c</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>FULL_NAME</field>
        <operation>contains</operation>
        <value>Test</value>
    </filters>
    <label>Test Users</label>
</ListView>